# lab06

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: main.yml  release.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt  CPack.cmake  equation.cpp
solver_lib/: CMakeLists.txt  solver.cpp
